benchmarks/context_waste/fixtures/build_logs/typescript_build.txt
$ npm ci && npm run build
npm http fetch GET 200 https://registry.example.invalid/react 24ms
npm http fetch GET 200 https://registry.example.invalid/typescript 31ms
npm http fetch GET 200 https://registry.example.invalid/vite 28ms
npm http fetch GET 200 https://registry.example.invalid/zod 27ms
> checkout-web@2.4.1 build
> tsc -b && vite build
src/server/auth.ts:214:19 - error TS2345: Argument of type 'string | undefined' is not assignable to parameter of type 'string'.
214     requireUser(session.user.id)
                      ~~~~~~~~~~~~~
npm http fetch GET 200 https://registry.example.invalid/chunk-001 24ms
npm http fetch GET 200 https://registry.example.invalid/chunk-002 24ms
npm http fetch GET 200 https://registry.example.invalid/chunk-003 24ms
ERROR: build failed while compiling src/server/auth.ts
exit code: 2
